Fixes #14355: Remove horizontal scrollbar

--- a/app/assets/stylesheets/bastion/overrides.scss
+++ b/app/assets/stylesheets/bastion/overrides.scss
@@ -55,3 +55,7 @@ ul {
     padding-left: 15px;
   }
 }
+
+.row {
+  margin-right: -7px;
+}
